--- a/app/views/pages/finish_user.html.erb
+++ b/app/views/pages/finish_user.html.erb
@@ -1,7 +1,7 @@
 <h1>Finalise your <%= current_user.role.capitalize %> Profile</h1>
 
 <% if current_user.athlete? %>
-  <%= render 'form', trait: @trait %>
+  <%= render 'athleteform', trait: @trait %>
 <% elsif current_user.scout? %>
-  <h3>Scout</h3>
+  <%= render 'schoolform', school: @school %>
 <% end %>
