--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,18 @@
   </head>
 
   <body>
-    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+    <nav class="navbar navbar-dark bg-dark">
+      <% if user_signed_in? %>
+        <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to 'Sign In', new_user_session_path %>
+        <%= link_to 'Sign Up', new_user_registration_path %>
+      <% end %>
+    </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <section class="body">
+      <%= yield %>
+    </section>
   </body>
 </html>
