--- a/app/views/pages/_schoolform.html.erb
+++ b/app/views/pages/_schoolform.html.erb
@@ -45,12 +45,12 @@
 
       <div class="field form-group">
         <%= f.label :country %>
-        <%= f.text_field :country, class: "form-control" %>
+        <%= f.select :country, options_for_select(CS.countries.map { |c| [c[1], c[0]] }), {}, {:class => "form-control"} %>
       </div>
 
     <% end %>
 
   <div class="actions">
-    <%= form.submit "Save" %>
+    <%= form.submit "Save", class: "btn btn-primary" %>
   </div>
 <% end %>
