Edited views and layouts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-light">
       <% if user_signed_in? %>
         <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
       <% else %>
