--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,10 +1,18 @@
 @import 'users';
+@import 'navbar';
+@import 'athlete';
 
 body {
-  background-color: #efefef;
+  background-image: url('Athlete-BG');
+}
+
+.body-background {
+  background-color: rgba(47, 48, 47, 0.5);
+  width: 100%;
 }
 
 .body {
   width: 70%;
   margin: 0 auto;
+  margin-top: 70px;
 }
