--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,11 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
 
+    <div class="field form-group">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: "form-control"%>
+    </div>
+
     <div class="actions">
       <%= f.submit "Sign up", class: "btn btn-primary" %>
     </div>
