Athlete profile style changes

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -15,7 +15,7 @@
   .dropdown {
     float: right;
     font-size: 26px;
-    color: black;
+    color: white;
     .nav-avatar {
       height: 40px;
       width: 40px;
@@ -23,7 +23,7 @@
       display: inline-block;
     }
     .nav-link {
-      color: black;
+      color: white;
       display: inline-block;
       padding-left: 5px;
       position: relative;
