--- a/app/assets/stylesheets/athlete.css.scss
+++ b/app/assets/stylesheets/athlete.css.scss
@@ -1,14 +1,109 @@
-.profile-name {
-  width: 300px;
-  border-bottom: 2px solid #0084ff;
-  h1 {
-    font-size: 80px;
-    color: #fff;
-    margin-top: -15px;
+.profile-container {
+  .profile-name {
+    width: 325px;
+    border-bottom: 2px solid #0084ff;
+    margin-bottom: 30px;
+    h1 {
+      font-size: 80px;
+      color: #fff;
+      margin-top: -15px;
+    }
+    h2 {
+      font-size: 65px;
+      color: #ddd;
+      margin-bottom: 0px;
+    }
   }
-  h2 {
-    font-size: 65px;
+  .athlete-img {
+    width: 250px;
+    float: right;
+    position: relative;
+    bottom: 180px;
+    border-radius: 125px;
+  }
+  .athlete-height {
+    color: white;
+    display: inline-block;
+    h3 {
+      font-size: 20px;
+      color: lightgray;
+      margin: 0 auto;
+    }
+    h4 {
+      font-size: 50px;
+      margin-bottom: 0px;
+      span {
+        font-size: 25px;
+        margin-right: 15px;
+        margin-left: 3px;
+      }
+    }
+    h5 {
+      margin-left: 10px;
+      color: #eee;
+    }
+  }
+  .athlete-weight {
+    margin-left: 15px;
+    color: white;
+    display: inline-block;
+    h3 {
+      font-size: 20px;
+      color: lightgray;
+      margin: 0 auto;
+    }
+    h4 {
+      font-size: 50px;
+      margin-bottom: 0px;
+      span {
+        font-size: 25px;
+        margin-right: 15px;
+        margin-left: 3px;
+      }
+    }
+    h5 {
+      color: #eee;
+      margin-left: 10px;
+    }
+  }
+  .position-title {
     color: #ddd;
+    font-size: 20px;
     margin-bottom: 0px;
+    margin-top: 15px;
   }
+  .athlete-position {
+    color: white;
+    font-size: 33px;
+    width: 325px;
+    border-bottom: 2px solid #0084ff;
+    padding-bottom: 25px;
+  }
+}
+
+.scout-options {
+  float: right;
+  position: relative;
+  bottom: 260px;
+}
+
+table.table-dark {
+  margin-top: 50px;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #444;
+  text-align: center;
+}
+
+.table th {
+  border-top: none;
+  background-color: #555;
+}
+
+table th:first-child{
+  border-radius:10px 0 0;
+}
+
+table th:last-child{
+  border-radius:0 10px 0 0;
 }
