--- a/app/views/pages/athlete.html.erb
+++ b/app/views/pages/athlete.html.erb
@@ -1,15 +1,26 @@
+<%= link_to 'Back', athletes_path if current_user.scout? %>
 <div class="profile-container">
   <div class="profile-name">
     <% athlete_name = @athlete.name.split %>
     <h2><%= athlete_name.first %></h2>
     <h1><%= athlete_name.second %></h1>
   </div>
-  <%= image_tag @athlete.avatar %>
+  <%= image_tag @athlete.avatar, class: "athlete-img" %>
   <% unless @athlete.statistic.nil? %>
-    <p><%= @athlete.statistic.height.to_s + "cm" %></p>
-    <p><%= @athlete.statistic.weight.to_s + "kg" %></p>
-    <p><%= @athlete.statistic.position %></p>
-    <table>
+    <div class="athlete-height">
+      <h3>HEIGHT</h3>
+      <% split_height = ((@athlete.statistic.height / 30.48).round(1)).to_s.split(".") %>
+      <h4><%= split_height.first %><span class="small-height">ft</span><%= split_height.second %><span class="small-height">in</span></h4>
+      <h5>/ <%= @athlete.statistic.height.to_s %><span class="small-height"> cm</span></h5>
+    </div>
+    <div class="athlete-weight">
+      <h3>WEIGHT</h3>
+      <h4><%= (@athlete.statistic.weight * 2.205).to_i.to_s %><span class="small-height"> lbs</span></h4>
+      <h5>/ <%= @athlete.statistic.weight %><span class="small-height"> kg</span></h5>
+    </div>
+    <h5 class="position-title">POSITION</h5>
+    <h3 class="athlete-position"><%= @athlete.statistic.position.upcase %></h3>
+    <table class="table table-dark">
       <tr>
         <th>Points</th>
         <th>Rebounds</th>
@@ -26,4 +37,8 @@
       </tr>
     </table>
   <% end %>
+  <div class="scout-options">
+      <button class="btn btn-primary">Message</button>
+      <button class="btn btn-info">Offer Scholarship</button>
+    </div>
 </div>
