--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -22,7 +24,7 @@
 
       <div class="nav-logo">
         <a class="navbar-brand" href="<%= root_url %>">
-          <%= image_tag 'Athlead-Black', class: "navbar-logo"%>
+          <%= image_tag 'Athlead-White', class: "navbar-logo"%>
         </a>
       </div>
       <div class="account-menu">
