Added video embedding for athletes. Style changes to accomodate

--- a/app/assets/stylesheets/athlete.css.scss
+++ b/app/assets/stylesheets/athlete.css.scss
@@ -129,3 +129,16 @@ table th:last-child{
     margin-bottom: 40px;
   }
 }
+
+.videos-container {
+  display: flex;
+  justify-content: space-around;
+}
+.video-card {
+  width: 400px;
+  background-color: #444;
+  border-radius: 20px;
+  iframe {
+    border-radius: 20px;
+  }
+}
