--- a/app/views/pages/athlete.html.erb
+++ b/app/views/pages/athlete.html.erb
@@ -44,10 +44,25 @@
     </div>
   <section class="athlete-videos">
     <h1>Videos & Highlights</h1>
+    <% if current_user.id == @athlete.id %>
+      <%= link_to "New Video", new_video_path %><br><br>
+    <% end %>
     <div class="videos-container">
-      <div class="card" style="width: 400px;">
-        <iframe width="100%" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-      </div>
+    <% unless @athlete.videos.nil? %>
+      <% @athlete.videos.each do |video| %>
+        <div class="card video-card">
+        <% if video.link.include?("youtube.com") %>
+          <% split_link = video.link.split("?v=") %>
+        <% elsif video.link.include?("youtu.be") %>
+          <% split_link = video.link.split(".be/") %>
+        <% end %>
+          <iframe width="100%" height="250" src="https://www.youtube.com/embed/<%= split_link.last %>"></iframe>
+          <% if current_user.id == @athlete.id %>
+            <%= link_to 'Delete Video', video_path(video), method: :delete %>
+          <% end %>
+        </div>
+      <% end %>
+    <% end %>
     </div>
   </section>
   <br><br>
