--- a/app/views/pages/athlete.html.erb
+++ b/app/views/pages/athlete.html.erb
@@ -49,7 +49,7 @@
           <% end %>
         <% end %>
         <% unless offer_found %>
-          <%= render 'shared/offerform', offer: @offer %>
+          <%= render 'shared/offerform', offer: @offer, athlete: @athlete %>
         <% end %>
     </div>
   <section class="athlete-videos">
