--- a/app/views/shared/_offerform.html.erb
+++ b/app/views/shared/_offerform.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= form.hidden_field :athlete_id, :value => @athlete.id %>
+  <%= form.hidden_field :athlete_id, :value => athlete.id %>
 
   <div class="actions">
     <%= form.submit "Offer Scholarship", class: "btn btn-info" %>
