Added messages and conversations. Edited styles for conversation pages.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import 'athletes';
 @import 'videos';
 @import 'offers';
+@import 'conversations';
 
 body {
   background-image: url('Athlete-BG');
