--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,8 @@
             <%= current_user.name %>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <%= link_to 'Offers', offers_path %>
+              <%= link_to 'Messages', conversations_path, class: "dropdown-item" %>
+              <%= link_to 'Offers', offers_path, class: "dropdown-item" %>
               <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
               <%= link_to 'Sign In', new_user_session_path, class: "dropdown-item" %>
