Tweaked offers to allow for accepting and declining. Style changes depending on status

--- a/app/assets/stylesheets/athlete.css.scss
+++ b/app/assets/stylesheets/athlete.css.scss
@@ -133,6 +133,7 @@ table th:last-child{
 .videos-container {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 .video-card {
   width: 400px;
