--- a/app/views/pages/athlete.html.erb
+++ b/app/views/pages/athlete.html.erb
@@ -42,31 +42,36 @@
     </table>
     <div class="stats-border"></div>
   <% end %>
-  <div class="scout-options">
+  <% if current_user.scout? %>
+    <div class="scout-options">
       <button class="btn btn-primary">Message</button>
-        <% offer_found = false %>
-        <% athlete_committed = false %>
-        <% @athlete.received_offers.each do |offer| %>
-          <% athlete_committed = true if offer.accepted? %>
-          <% if offer.scout.id == current_user.id %>
-            <% offer_found = true %>
-            <% if offer.accepted? %>
-              <button type="button" class="btn btn-success" disabled>Committed</button>
-            <% elsif offer.declined? %>
-              <button type="button" class="btn btn-warning" disabled>Declined</button>
-            <% else %>
-              <button class="btn btn-danger"><%= link_to 'Delete Offer', offer, method: :delete %></button>
-            <% end %>
-            <% break %>
+      <% offer_found = false %>
+      <% athlete_committed = false %>
+      <% athlete_school = false %>
+      <% @athlete.received_offers.each do |offer| %>
+        <% athlete_committed = true if offer.accepted? %>
+        <% athlete_school = offer.scout.school.name %>
+        <% if offer.scout.id == current_user.id %>
+          <% offer_found = true %>
+          <% if offer.accepted? %>
+            <button type="button" class="btn btn-success" disabled>Committed</button>
+          <% elsif offer.declined? %>
+            <button type="button" class="btn btn-warning" disabled>Declined</button>
+          <% else %>
+            <button class="btn btn-danger"><%= link_to 'Delete Offer', offer, method: :delete %></button>
           <% end %>
+          <% break %>
         <% end %>
-        <% unless offer_found || athlete_committed %>
-          <%= render 'shared/offerform', offer: @offer, athlete: @athlete %>
-        <% end %>
-        <% if athlete_committed %>
-          <button type="button" class="btn btn-warning" disabled>Committed</button>
-        <% end %>
+      <% end %>
+      <% unless offer_found || athlete_committed %>
+        <%= render 'shared/offerform', offer: @offer, athlete: @athlete %>
+      <% end %>
+      <% if athlete_committed %>
+        <button type="button" class="btn btn-warning" disabled>Committed</button><br><br>
+        <button type="button" class="btn btn-light" disabled><%= athlete_school %></button>
+      <% end %>
     </div>
+  <% end %>
   <section class="athlete-videos">
     <h1>Videos & Highlights</h1>
     <% if current_user.id == @athlete.id %>
