Edited signup form, added required fields

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,12 +10,12 @@
 
     <div class="field form-group">
       <%= f.label :name %>
-      <%= f.text_field :name, class: "form-control" %>
+      <%= f.text_field :name, class: "form-control", required: true %>
     </div>
 
     <div class="field form-group">
       <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", required: true %>
     </div>
 
     <div class="field form-group">
@@ -23,17 +23,17 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br>
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control", required: true %>
     </div>
 
     <div class="field form-group">
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", required: true %>
     </div>
 
     <div class="field form-group">
       <%= f.label :avatar %>
-      <%= f.file_field :avatar, class: "form-control"%>
+      <%= f.file_field :avatar, accept: 'image/png,image/jpg,image/jpeg', class: "form-control", required: true %>
     </div>
 
     <div class="actions">
