--- a/app/views/pages/complete.html.erb
+++ b/app/views/pages/complete.html.erb
@@ -1,5 +1,5 @@
 <div class="user-form">
-  <h1>Finalise your Scout Profile</h1>
+  <h1>Finalise your <%= current_user.role.capitalize %> Profile</h1>
   <br>
   <% if current_user && (current_user.athlete? && current_user.statistic.nil?) %>
     <%= render 'shared/statisticform', statistic: @statistic %>
