--- a/app/views/shared/_statisticform.html.erb
+++ b/app/views/shared/_statisticform.html.erb
@@ -12,45 +12,46 @@
   <% end %>
 
   <div class="field form-group">
+    <% positions = [["Point Guard", "Point Guard"], ["Shooting Guard", "Shooting Guard"], ["Small Forward", "Small Forward"], ["Power Forward", "Power Forward"], ["Center", "Center"]] %>
     <%= form.label :position %>
-    <%= form.text_field :position, class: "form-control" %>
+    <%= form.select :position, options_for_select(positions), {}, {:class => "form-control"} %>
   </div>
 
   <div class="field form-group">
     <%= form.label :height %>
-    <%= form.number_field :height, class: "form-control" %>
+    <%= form.number_field :height, min: 100, max: 250, class: "form-control" %>
   </div>
 
   <div class="field form-group">
     <%= form.label :weight %>
-    <%= form.number_field :weight, class: "form-control" %>
+    <%= form.number_field :weight, min: 40, max: 250, class: "form-control" %>
   </div>
   
   <br><br><hr>
 
   <div class="field form-group">
     <%= form.label :points %>
-    <%= form.text_field :points, class: "form-control" %>
+    <%= form.number_field :points, class: "form-control", step: 0.1 %>
   </div>
 
   <div class="field">
     <%= form.label :rebounds %>
-    <%= form.text_field :rebounds, class: "form-control" %>
+    <%= form.number_field :rebounds, class: "form-control", step: 0.1 %>
   </div>
 
   <div class="field form-group">
     <%= form.label :assists %>
-    <%= form.text_field :assists, class: "form-control" %>
+    <%= form.number_field :assists, class: "form-control", step: 0.1 %>
   </div>
 
   <div class="field form-group">
     <%= form.label :steals %>
-    <%= form.text_field :steals, class: "form-control" %>
+    <%= form.number_field :steals, class: "form-control", step: 0.1 %>
   </div>
 
   <div class="field form-group">
     <%= form.label :blocks %>
-    <%= form.text_field :blocks, class: "form-control" %>
+    <%= form.number_field :blocks, class: "form-control", step: 0.1 %>
   </div>
 
   <div class="actions">
