Style changes for navbar and payment pages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,6 +5,7 @@
 @import 'videos';
 @import 'offers';
 @import 'conversations';
+@import 'payments';
 
 body {
   background-image: url('Athlete-BG');
